# rusthome

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
configs/: Caddyfile.rusthome.example  bridge.example.toml  nginx-rusthome.conf.example  rusthome-bridge.service  rusthome-mqtt.service  rusthome-web.service  rusthome.example.toml  rusthome.init.toml  rusthome.service  zigbee2mqtt.configuration.example.yaml
crates/app/: Cargo.toml
crates/app/examples/: append_observed.rs  ingest_turn_off.rs  mqtt_motion_ingest.rs
crates/app/src/: config_snapshot.rs  lib.rs  mqtt_ingest.rs  pipeline.rs  reconciliation.rs  rule_trace.rs  run_error.rs  rusthome_file.rs  z2m_bridge_cache.rs
crates/app/src/integrations/: mod.rs  mqtt.rs
crates/app/tests/: command_dedup.rs  determinism_proptest.rs  error_occurred_replay.rs  invariants.rs  io_lifecycle.rs  mqtt_command_ingest.rs  mqtt_observation_closed_loop.rs  oscillation_proptest.proptest-regressions  oscillation_proptest.rs  policy_and_trace.rs  preset_home.rs  preset_minimal.rs  scenario_16.rs  sensor_rules.rs  shared_axis_invariant.rs  truth_convergence.rs  turn_off_light.rs
crates/app/tests/common/: mod.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: config.rs  main.rs  mapping.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  init.rs  main.rs  serve.rs
crates/core/: Cargo.toml
crates/core/src/: command_id.rs  config.rs  error.rs  event.rs  host_runtime_config.rs  journal.rs  lib.rs  reducer.rs  reducer_tests.rs  rules.rs  state.rs  trace.rs  view.rs
crates/core/src/event/: command.rs  envelope.rs  error_event.rs  fact.rs  mod.rs  observation.rs  types.rs
crates/infra/: Cargo.toml
crates/infra/src/: canon.rs  error.rs  journal.rs  lib.rs  snapshot.rs
crates/journal/: Cargo.toml
crates/journal/src/: error.rs  lib.rs  line.rs
crates/rules/: Cargo.toml  clippy.toml
crates/rules/src/: bundle.rs  family_transitions.rs  lib.rs  preset.rs  registry.rs  rules_impl.rs  whitelist.rs
crates/web/: Cargo.toml  README.md
crates/web/src/: bluetooth_info.rs  dashboard.html  html_pages.rs  journal.rs  lib.rs  main.rs  security.rs  sensor_display.rs  sensors.html  system.html  system_info.rs  util.rs
crates/web/static/: app.css  common.js  dashboard.js  sensors.js  system.js
crates/web/templates/: dashboard.html  sensors.html  system.html
data/: rusthome.toml  sensor_display.json  zigbee2mqtt.configuration.suggested.yaml
docs/: README.md  adapters-and-bridges.md  errors.md  implementation.md  integration.md  io-lifecycle.md  mqtt-contract.md  onboarding-rules.md  ops-data-dir.md  perf-assumptions.md  plan.v0.md  presence-bridge.md  reconciliation.md  roadmap-2-semaines.md  rules-changelog.md  scenarios.md  schema-migration.md  testing-core.md  user-rules.md  web-proxy.md  zigbee-conbee.md
scripts/: bench-p95.sh  mqtt-load-test.sh  mqtt-p95.sh  proptest-suite-p95.sh
