[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/rules",
    "crates/app",
    "crates/infra",
    "crates/cli",
    "crates/web",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tempfile = "3"
proptest = "1.8"
toml = "0.8"
