[package]
name = "rusthome-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Orchestration: FIFO pipeline, rule engine wiring"

[dependencies]
rusthome-core = { path = "../core" }
rusthome-rules = { path = "../rules" }
rusthome-infra = { path = "../infra" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rumqttc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
clap = { workspace = true }
