[package]
name = "rusthome-bridge"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Zigbee2MQTT (and similar) → rusthome MQTT contract republisher"

[[bin]]
name = "rusthome-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
