[package]
name = "rusthome-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI: emit, state, replay"

[[bin]]
name = "rusthome"
path = "src/main.rs"

[dependencies]
rusthome-core = { path = "../core" }
rusthome-app = { path = "../app" }
rusthome-infra = { path = "../infra" }
rusthome-rules = { path = "../rules" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
