[package]
name = "rusthome-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI: emit, state, replay, serve (web UI)"

[[bin]]
name = "rusthome"
path = "src/main.rs"

[dependencies]
rusthome-core = { path = "../core" }
rusthome-app = { path = "../app" }
rusthome-infra = { path = "../infra" }
rusthome-rules = { path = "../rules" }
rusthome-web = { path = "../web" }
clap = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
