[package]
name = "rusthome-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI: emit, state, replay, serve (web + MQTT lab, optional feature)"

[features]
default = []
# Embedded MQTT broker + web dashboard (`rusthome serve`). Build: `cargo build -p rusthome-cli --features serve`
serve = ["dep:rusthome-web", "dep:rumqttd", "dep:tokio"]

[[bin]]
name = "rusthome"
path = "src/main.rs"

[dependencies]
rusthome-core = { path = "../core" }
rusthome-journal = { path = "../journal" }
rusthome-app = { path = "../app" }
rusthome-infra = { path = "../infra" }
rusthome-rules = { path = "../rules" }
rusthome-web = { path = "../web", optional = true }
clap = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
rumqttd = { workspace = true, optional = true }
tracing = { workspace = true }
