[package]
name = "rusthome-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure domain: events, state, reducer, rule traits"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
