[package]
name = "rusthome-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Journal JSONL, snapshot, sequence, timestamp gate"

[dependencies]
rusthome-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
