[package]
name = "rusthome-journal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Persisted journal line shape and schema (JSONL metadata + Event body)"

[dependencies]
rusthome-core = { path = "../core" }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
