[package]
name = "rusthome-rules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rule registry — deps limited to core + serde"

[dependencies]
rusthome-core = { path = "../core" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

# §6.12.1 — see clippy.toml for disallowed-types (Instant, SystemTime).
[lints.clippy]
disallowed_types = "warn"
