[package]
name = "rusthome-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Minimal read-only web dashboard (dev)"

[[bin]]
name = "rusthome-web"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap = { workspace = true }
rusthome-app = { path = "../app" }
rusthome-core = { path = "../core" }
rusthome-infra = { path = "../infra" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
