[package]
name = "rusthome-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Minimal read-only web dashboard (dev)"

[lib]
name = "rusthome_web"
path = "src/lib.rs"

[[bin]]
name = "rusthome-web"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap = { workspace = true }
rusthome-app = { path = "../app" }
rusthome-core = { path = "../core" }
rusthome-infra = { path = "../infra" }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { version = "0.38.4", default-features = false, features = ["system", "component", "disk"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
